# Hexlet_Brain_Games_python

./: .gitignore  .travis.yml  Makefile  README.md  makefile  pyproject.toml
brain_games/: cli.py  engine.py  game_chooser.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  test_game1.py  test_game2.py  test_main.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
zed_chi_brain_games.egg-info/: PKG-INFO  SOURCES.txt
