[tool.poetry]
name = "zedchi_brain_games"
version = "0.5.0"
description = ""
authors = ["Zed-chi <zed-chi@mail.ru>"]
packages = [
    { include = "brain_games"}
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.cli:run"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-gcd = "brain_games.scripts.games.brain_gcd:main"
brain-progression = "brain_games.scripts.games.brain_progression:main"
brain-prime = "brain_games.scripts.games.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

