[tool.poetry]
name = "zedchi_brain_games"
version = "0.5.3"
description = "Collection of console-based games"
authors = ["Zed-chi <zed-chi@mail.ru>"]
repository = "https://github.com/Zed-chi/python-project-lvl1"
packages = [
    { include = "brain_games"}
]
classifiers = [
    "Topic :: Games/Entertainment",
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
